syntax = "proto3";

message TimePageToken {
  int64 updated_at = 1;
  uint32 page_size = 2;
  uint64 id = 3;
}
